--- a/bptworldAppsToo.json
+++ b/bptworldAppsToo.json
@@ -1,27 +1,217 @@
 {
   "GitHubAuthor": "BPTWorld",
   "GitHubMainURL": "https://github.com/bptworld/Hubitat",
-  "GitHubAppCount": "2",
-  
-  "AppWatchdogTooType": "App",
-  "AppWatchdogTooParentVersion": "v1.0.0",
-  "AppWatchdogTooChildVersion": "v1.1.2",
-  "AppWatchdogTooDriverVersion": "v1.0.2",
-  "AppWatchdogTooParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/App%20Watchdog/AW-parent.groovy",
-  "AppWatchdogTooChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/App%20Watchdog/AW-child.groovy",
-  "AppWatchdogTooDriverRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/App%20Watchdog/AW-driver.groovy",
-  "AppWatchdogTooDiscussion": "https://community.hubitat.com/t/release-app-watchdog/9952",
-  "AppWatchdogTooUpdateNote": "V1.1.2 - 04/15/19 - Code cleanup",
-  
-  "AppName2": "Abacus Time Traveler",
-  "AppType2": "App",
-  "AppParentVersion2": "v1.0.4",
-  "AppChildVersion2": "v1.0.5",
-  "AppDriverVersion2": "NA",
-  "AppParentRawCode2": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Abacus%20-%20Time%20Traveler/ATT-parent.groovy",
-  "AppChildRawCode2": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Abacus%20-%20Time%20Traveler/ATT-child.groovy",
-  "AppDriverRawCode2": "NA",
-  "AppDiscussion2": "https://community.hubitat.com/t/release-abacus-time-traveler/8091",
-  "AppUpdateNote2": "V1.0.5 - 03/22/19 - Maintenance release to prepare for V2.0.0. You will need this version to save all of your stats!",
-
+  "GitHubAppCount": "20",
+  "1",
+  "AbacusIntenseCountingType": "App",
+  "AbacusIntenseCountingParentVersion": "v1.0.7",
+  "AbacusIntenseCountingChildVersion": "v1.1.0",
+  "AbacusIntenseCountingDriverVersion": "V1.0.2",
+  "AbacusIntenseCountingParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Abacus%20-%20Intense%20Counting/AIC-parent.groovy",
+  "AbacusIntenseCountingChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Abacus%20-%20Intense%20Counting/AIC-child.groovy",
+  "AbacusIntenseCountingDriverRawCode": "https://github.com/bptworld/Hubitat/blob/master/Apps/Abacus%20-%20Intense%20Counting/AIC-driver.groovy",
+  "AbacusIntenseCountingDiscussion": "https://community.hubitat.com/t/release-abacus-intense-counting/7883",
+  "AbacusIntenseCountingUpdateNote": "V1.1.0 - 04/15/19 - Code cleanup",
+  "2",
+  "AbacusTimeTravelerType": "App",
+  "AbacusTimeTravelerParentVersion": "v1.0.4",
+  "AbacusTimeTravelerChildVersion": "v1.0.5",
+  "AbacusTimeTravelerDriverVersion": "NA",
+  "AbacusTimeTravelerParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Abacus%20-%20Time%20Traveler/ATT-parent.groovy",
+  "AbacusTimeTravelerChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Abacus%20-%20Time%20Traveler/ATT-child.groovy",
+  "AbacusTimeTravelerDriverRawCode": "NA",
+  "AbacusTimeTravelerDiscussion": "https://community.hubitat.com/t/release-abacus-time-traveler/8091",
+  "AbacusTimeTravelerUpdateNote": "V1.0.5 - 03/22/19 - Maintenance release to prepare for V2.0.0. You will need this version to save all of your stats!",
+  "3",
+  "AppWatchdogType": "App",
+  "AppWatchdogParentVersion": "v1.0.0",
+  "AppWatchdogChildVersion": "v1.1.2",
+  "AppWatchdogDriverVersion": "v1.0.2",
+  "AppWatchdogParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/App%20Watchdog/AW-parent.groovy",
+  "AppWatchdogChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/App%20Watchdog/AW-child.groovy",
+  "AppWatchdogDriverRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/App%20Watchdog/AW-driver.groovy",
+  "AppWatchdogDiscussion": "https://community.hubitat.com/t/release-app-watchdog/9952",
+  "AppWatchdogUpdateNote": "V1.1.2 - 04/15/19 - Code cleanup",
+  "4",
+  "AtHomeSimulatorType": "App",
+  "AtHomeSimulatorParentVersion": "v1.0.0",
+  "AtHomeSimulatorChildVersion": "v1.0.2",
+  "AtHomeSimulatorDriverVersion": "NA",
+  "AtHomeSimulatorParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/At%20Home%20Simulator/AHS-parent.groovy",
+  "AtHomeSimulatorChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/At%20Home%20Simulator/AHS-child.groovy",
+  "AtHomeSimulatorDriverRawCode": "NA",
+  "AtHomeSimulatorDiscussion": "https://community.hubitat.com/t/beta-at-home-simulator/8697",
+  "AtHomeSimulatorUpdateNote": "V1.0.2 - 04/15/19 - Code cleanup",
+  "5",  
+  "BIControlType": "App",
+  "BIControlParentVersion": "v1.0.5",
+  "BIControlChildVersion": "v1.0.9",
+  "BIControlDriverVersion": "NA",
+  "BIControlParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/BI%20Control/BIC%20Parent.groovy",
+  "BIControlChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/BI%20Control/BIC%20Child.groovy",
+  "BIControlDriverRawCode": "NA",
+  "BIControlDiscussion": "https://community.hubitat.com/t/release-bi-control-local-blue-iris-control/5454",
+  "BIControlUpdateNote": "V1.0.9 - 05/08/19 - Fixed a typo",
+  "6",  
+  "DeparturesType": "App",
+  "DeparturesParentVersion": "v1.0.0",
+  "DeparturesChildVersion": "v1.0.4",
+  "DeparturesDriverVersion": "NA",
+  "DeparturesParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Departures/D-parent.groovy",
+  "DeparturesChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Departures/D-child.groovy",
+  "DeparturesDriverRawCode": "NA",
+  "DeparturesDiscussion": "https://community.hubitat.com/t/release-departures/12039",
+  "DeparturesUpdateNote": "V1.0.4 - 04/20/19 - Updated speaker/speech options",
+  "7",  
+  "DeviceSequencerType": "App",
+  "DeviceSequencerParentVersion": "v1.0.2",
+  "DeviceSequencerChildVersion": "v1.0.5",
+  "DeviceSequencerDriverVersion": "NA",
+  "DeviceSequencerParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Device%20Sequencer/DS-parent.groovy",
+  "DeviceSequencerChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Device%20Sequencer/DS-child.groovy",
+  "DeviceSequencerDriverRawCode": "NA",
+  "DeviceSequencerDiscussion": "https://community.hubitat.com/t/release-device-sequencer/8596",
+  "DeviceSequencerUpdateNote": "V1.0.5 - 04/16/19 - Fixed some code",
+  "8",  
+  "DeviceWatchdogType": "App",
+  "DeviceWatchdogParentVersion": "v1.1.0",
+  "DeviceWatchdogChildVersion": "v1.3.4",
+  "DeviceWatchdogDriverVersion": "V1.0.4",
+  "DeviceWatchdogParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Device%20Watchdog/DW-parent.groovy",
+  "DeviceWatchdogChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Device%20Watchdog/DW-child.groovy",
+  "DeviceWatchdogDriverRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Device%20Watchdog/DW-driver.groovy",
+  "DeviceWatchdogDiscussion": "https://community.hubitat.com/t/release-device-watchdog/7692",
+  "DeviceWatchdogUpdateNote": "V1.3.4 - 05/24/19 - Fixed typo",
+  "9",  
+  "FollowMeType": "App",
+  "FollowMeParentVersion": "v1.0.0",
+  "FollowMeChildVersion": "v1.2.3",
+  "FollowMeDriverVersion": "NA",
+  "FollowMeParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Follow%20Me/FM-parent.groovy",
+  "FollowMeChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Follow%20Me/FM-child.groovy",
+  "FollowMeDriverRawCode": "NA",
+  "FollowMeDiscussion": "https://community.hubitat.com/t/release-follow-me/12139",
+  "FollowMeUpdateNote": "V1.2.3 - 07/06/19 - Complete rewrite of the speech handler. Should handle volume restore better on devices that support it.",
+  "10",  
+  "LightingEffectsType": "App",
+  "LightingEffectsParentVersion": "v1.2.0",
+  "LightingEffectsChildVersion": "v1.2.1",
+  "LightingEffectsDriverVersion": "NA",
+  "LightingEffectsParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Lighting%20Effects/LE%20Parent.groovy",
+  "LightingEffectsChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Lighting%20Effects/LE%20Child.groovy",
+  "LightingEffectsDriverRawCode": "NA",
+  "LightingEffectsDiscussion": "https://community.hubitat.com/t/release-lighting-effects/4330",
+  "LightingEffectsUpdateNote": "V1.2.1 - 04/15/19 - Code cleanup",
+  "11",  
+  "MagicCubeType": "App",
+  "MagicCubeParentVersion": "V1.0.0",
+  "MagicCubeChildVersion": "V1.0.2",
+  "MagicCubeDriverVersion": "NA",
+  "MagicCubeParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Magic%20Cube/MC-parent.groovy",
+  "MagicCubeChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Magic%20Cube/MC-child.groovy",
+  "MagicCubeDriverRawCode": "NA",
+  "MagicCubeDiscussion": "https://community.hubitat.com/t/release-magic-cube/11987",
+  "MagicCubeUpdateNote": "V1.0.2 - 04/15/19 - Code cleanup",
+  "12", 
+  "MotionControlledSceneLightingType": "App",
+  "MotionControlledSceneLightingParentVersion": "v1.0.3",
+  "MotionControlledSceneLightingChildVersion": "v1.0.5",
+  "MotionControlledSceneLightingDriverVersion": "NA",
+  "MotionControlledSceneLightingParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Motion%20Controlled%20Scene%20Lighting/MCSL-Parent.groovy",
+  "MotionControlledSceneLightingChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Motion%20Controlled%20Scene%20Lighting/MCSL-Child.groovy",
+  "MotionControlledSceneLightingDriverRawCode": "NA",
+  "MotionControlledSceneLightingDiscussion": "https://community.hubitat.com/t/release-motion-controlled-scene-lighting/7419",
+  "MotionControlledSceneLightingUpdateNote": "V1.0.5 - 04/15/19 - Code cleanup",
+  "13",  
+  "NotifierPlusType": "App",
+  "NotifierPlusParentVersion": "v1.0.1",
+  "NotifierPlusChildVersion": "v1.2.0",
+  "NotifierPlusDriverVersion": "NA",
+  "NotifierPlusParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Notifier%20Plus/NP-parent.groovy",
+  "NotifierPlusChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Notifier%20Plus/NP-child.groovy",
+  "NotifierPlusDriverRawCode": "NA",
+  "NotifierPlusDiscussion": "https://community.hubitat.com/t/release-notifier/10859",
+  "NotifierPlusUpdateNote": "V1.2.0 - 06/18/19 - Fixed a couple of typos, Attempt to fix the 'run every x days' option",
+  "14",  
+  "OneataTimeType": "App",
+  "OneataTimeParentVersion": "v1.1.2",
+  "OneataTimeChildVersion": "v1.1.3",
+  "OneataTimeDriverVersion": "NA",
+  "OneataTimeParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/One%20at%20a%20Time/OaaT-Parent.groovy",
+  "OneataTimeChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/One%20at%20a%20Time/OaaT-Child.groovy",
+  "OneataTimeDriverRawCode": "NA",
+  "OneataTimeDiscussion": "https://community.hubitat.com/t/release-one-at-a-time/7063",
+  "OneataTimeUpdateNote": "V1.1.3 - 04/15/19 - Code cleanup",
+  "15",  
+  "SendIP2IRType": "App",
+  "SendIP2IRParentVersion": "v1.1.7",
+  "SendIP2IRChildVersion": "v1.2.0",
+  "SendIP2IRDriverVersion": "V1.0.3",
+  "SendIP2IRParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Send%20IP2IR/SIP2IR%20Parent.groovy",
+  "SendIP2IRChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Send%20IP2IR/SIP2IR%20Child.groovy",
+  "SendIP2IRDriverRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Send%20IP2IR/SIP2IR%20Driver.groovy",
+  "SendIP2IRDiscussion": "https://community.hubitat.com/t/release-send-ip2ir-control-all-of-your-ir-devices-from-your-dashboard/4667",
+  "SendIP2IRUpdateNote": "V1.2.0 - 07/14/19 - Minor code changes",
+  "16",  
+  "SimpleIrrigationType": "App",
+  "SimpleIrrigationParentVersion": "v1.0.0",
+  "SimpleIrrigationChildVersion": "v1.0.6",
+  "SimpleIrrigationDriverVersion": "NA",
+  "SimpleIrrigationParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Simple%20Irrigation/SI-parent.groovy",
+  "SimpleIrrigationChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Simple%20Irrigation/SI-child.groovy",
+  "SimpleIrrigationDriverRawCode": "NA",
+  "SimpleIrrigationDiscussion": "-",
+  "SimpleIrrigationUpdateNote": " V1.0.6 - 06/09/19 - Fixed issue with multiple schedules",
+  "17",  
+  "SnapshotType": "App",
+  "SnapshotParentVersion": "v1.0.1",
+  "SnapshotChildVersion": "v1.1.5",
+  "SnapshotDriverVersion": "v1.0.9",
+  "SnapshotParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Snapshot/S-parent.groovy",
+  "SnapshotChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Snapshot/S-Child.groovy",
+  "SnapshotDriverRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Snapshot/S-driver.groovy",
+  "SnapshotDiscussion": "https://community.hubitat.com/t/release-snapshot/12042",
+  "SnapshotUpdateNote": "V1.1.5 - 06/11/19 - Code cleanup",
+  "18",  
+  "WebPingerType": "App",
+  "WebPingerParentVersion": "v1.0.2",
+  "WebPingerChildVersion": "v1.0.4",
+  "WebPingerDriverVersion": "NA",
+  "WebPingerParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Web%20Pinger/WP-parent.groovy",
+  "WebPingerChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Web%20Pinger/WP-child.groovy",
+  "WebPingerDriverRawCode": "NA",
+  "WebPingerDiscussion": "https://community.hubitat.com/t/release-web-pinger/8347",
+  "WebPingerUpdateNote": "V1.0.4 - 04/15/19 - Code cleanup",
+  "19",  
+  "WelcomeHomeType": "App",
+  "WelcomeHomeParentVersion": "v2.0.2",
+  "WelcomeHomeChildVersion": "v2.1.0",
+  "WelcomeHomeDriverVersion": "v1.0.2",
+  "WelcomeHomeParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Welcome%20Home/WH%20Parent.groovy",
+  "WelcomeHomeChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Welcome%20Home/WH%20Child.groovy",
+  "WelcomeHomeDriverRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Welcome%20Home/WH%20Driver.groovy",
+  "WelcomeHomeDiscussion": "https://community.hubitat.com/t/release-welcome-home/6445",
+  "WelcomeHomeUpdateNote": "V2.1.0 - 06/06/19 - Added more wording to Volume Control Options. Code cleanup.",
+  "20",  
+  "WhatDidISayType": "Driver",
+  "WhatDidISayDriver1Version": "v1.1.5",
+  "WhatDidISayDriver2Version": "NA",
+  "WhatDidISayDriver3Version": "NA",
+  "WhatDidISayDriver4Version": "NA",
+  "WhatDidISayDriver5Version": "NA",
+  "WhatDidISayDriver6Version": "NA",
+  "WhatDidISayDriver1RawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Drivers/What%20Did%20I%20Say/WDIS-driver.groovy",
+  "WhatDidISayDriver2RawCode": "NA",
+  "WhatDidISayDriver3RawCode": "NA",
+  "WhatDidISayDriver4RawCode": "NA",
+  "WhatDidISayDriver5RawCode": "NA",
+  "WhatDidISayDriver6RawCode": "NA",
+  "WhatDidISayDriver1Name": "What Did I Say",
+  "WhatDidISayDriver2Name": "NA",
+  "WhatDidISayDriver3Name": "NA",
+  "WhatDidISayDriver4Name": "NA",
+  "WhatDidISayDriver5Name": "NA",
+  "WhatDidISayDriver6Name": "NA",
+  "WhatDidISayDiscussion": "https://community.hubitat.com/t/release-what-did-i-say/9375",
+  "WhatDidISayUpdateNote": "V1.1.5 - 07/15/19 - Minor code changes",
 }
