--- a/bptworldAppsToo.json
+++ b/bptworldAppsToo.json
@@ -2,7 +2,27 @@
   "GitHubAuthor": "BPTWorld",
   "GitHubMainURL": "https://github.com/bptworld/Hubitat",
   "GitHubAppCount": "20",
-
+  "App01": "Abacus Intense Counting",
+  "App02": "Abacus Time Traveler",
+  "App03": "App Watchdog",
+  "App04": "At Home Simulator",
+  "App05": "BI Control",
+  "App06": "Departures",
+  "App07": "Device Sequencer",
+  "App08": "Device Watchdog",
+  "App09": "Follow Me",
+  "App10": "Lighting Effects",
+  "App11": "Magic Cube",
+  "App12": "Motion Controlled Scene Lighting",
+  "App13": "Notifier Plus",
+  "App14": "One at a Time",
+  "App15": "Send IP2IR",
+  "App16": "Simple Irrigation",
+  "App17": "Snapshot",
+  "App18": "Web Pinger",
+  "App19": "Welcome Home",
+  "App20": "What Did I Say",
+  
   "AbacusIntenseCountingType": "App",
   "AbacusIntenseCountingParentVersion": "v1.0.7",
   "AbacusIntenseCountingChildVersion": "v1.1.0",
