--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -138,13 +138,13 @@
   
   "FollowMeType": "App",
   "FollowMeParentVersion": "v1.0.0",
-  "FollowMeChildVersion": "v1.2.6",
+  "FollowMeChildVersion": "v1.2.7",
   "FollowMeDriverVersion": "NA",
   "FollowMeParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Follow%20Me/FM-parent.groovy",
   "FollowMeChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Follow%20Me/FM-child.groovy",
   "FollowMeDriverRawCode": "NA",
   "FollowMeDiscussion": "https://community.hubitat.com/t/release-follow-me/12139",
-  "FollowMeUpdateNote": "V1.2.6 - 07/27/19 - One small change to speaker test",
+  "FollowMeUpdateNote": "V1.2.7 - 07/28/19 - More changes to play Track",
   
   "LightingEffectsType": "App",
   "LightingEffectsParentVersion": "v1.2.0",
