--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -138,13 +138,13 @@
   
   "FollowMeType": "App",
   "FollowMeParentVersion": "v1.0.0",
-  "FollowMeChildVersion": "v1.3.3",
+  "FollowMeChildVersion": "v1.3.8",
   "FollowMeDriverVersion": "NA",
   "FollowMeParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Follow%20Me/FM-parent.groovy",
   "FollowMeChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Follow%20Me/FM-child.groovy",
   "FollowMeDriverRawCode": "NA",
   "FollowMeDiscussion": "https://community.hubitat.com/t/release-follow-me/12139",
-  "FollowMeUpdateNote": "V1.3.3 - 08/03/19 - Fixed several typos, reworked how the sound length gets calculated. Also, first attempt at adding playAnnouncement for Echo devices.",
+  "FollowMeUpdateNote": "V1.3.8 - 08/04/19 - Fixed old message being spoken. Fixed volume error on Goolge/Nest devices.",
   
   "LightingEffectsType": "App",
   "LightingEffectsParentVersion": "v1.2.0",
