--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -4,7 +4,7 @@
   "GitHubAppCount": "20",
   "App01": "Abacus Intense Counting",
   "App02": "Abacus Time Traveler",
-  "App03": "App Watchdog",
+  "App03": "App Watchdog 2",
   "App04": "At Home Simulator",
   "App05": "BI Control",
   "App06": "Departures",
@@ -76,15 +76,15 @@
   "AbacusTimeTravelerDiscussion": "https://community.hubitat.com/t/release-abacus-time-traveler/8091",
   "AbacusTimeTravelerUpdateNote": "V1.0.5 - 03/22/19 - Maintenance release to prepare for V2.0.0. You will need this version to save all of your stats!",
 
-  "AppWatchdogType": "App",
-  "AppWatchdogParentVersion": "v1.0.0",
-  "AppWatchdogChildVersion": "v1.1.2",
-  "AppWatchdogDriverVersion": "v1.0.2",
-  "AppWatchdogParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/App%20Watchdog/AW-parent.groovy",
-  "AppWatchdogChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/App%20Watchdog/AW-child.groovy",
-  "AppWatchdogDriverRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/App%20Watchdog/AW-driver.groovy",
-  "AppWatchdogDiscussion": "https://community.hubitat.com/t/release-app-watchdog/9952",
-  "AppWatchdogUpdateNote": "V1.1.2 - 04/15/19 - Code cleanup",
+  "AppWatchdog2Type": "App",
+  "AppWatchdog2ParentVersion": "v2.0.0",
+  "AppWatchdog2ChildVersion": "v2.0.0",
+  "AppWatchdog2DriverVersion": "v2.0.0",
+  "AppWatchdog2ParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Apps%20Watchdog%202/AW2-parent.groovy",
+  "AppWatchdog2ChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Apps%20Watchdog%202/AW2-child.groovy",
+  "AppWatchdog2DriverRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Apps%20Watchdog%202/AW2-driver.groovy",
+  "AppWatchdog2Discussion": "https://community.hubitat.com/t/release-app-watchdog/9952",
+  "AppWatchdog2UpdateNote": "V2.0.0 - 08/18/19 - Initial Release",
 
   "AtHomeSimulatorType": "App",
   "AtHomeSimulatorParentVersion": "v1.0.0",
