--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -7,21 +7,23 @@
   "App03": "App Watchdog 2",
   "App04": "At Home Simulator",
   "App05": "BI Control",
-  "App06": "Departures",
-  "App07": "Device Sequencer",
-  "App08": "Device Watchdog",
-  "App09": "Follow Me",
-  "App10": "Lighting Effects",
-  "App11": "Magic Cube",
-  "App12": "Motion Controlled Scene Lighting",
-  "App13": "Notifier Plus",
-  "App14": "One at a Time",
-  "App15": "Send IP2IR",
-  "App16": "Simple Irrigation",
-  "App17": "Snapshot",
-  "App18": "Web Pinger",
-  "App19": "Welcome Home",
-  "App20": "What Did I Say",
+  "App06": "CATT Director",
+  "App07": "Chromecast Helper",
+  "App08": "Departures",
+  "App09": "Device Sequencer",
+  "App10": "Device Watchdog",
+  "App11": "Follow Me",
+  "App12": "Lighting Effects",
+  "App13": "Magic Cube",
+  "App14": "Motion Controlled Scene Lighting",
+  "App15": "Notifier Plus",
+  "App16": "One at a Time",
+  "App17": "Send IP2IR",
+  "App18": "Simple Irrigation",
+  "App19": "Snapshot",
+  "App20": "Web Pinger",
+  "App21": "Welcome Home",
+  "App22": "What Did I Say",
   
   
   "ExampleType": "App",
@@ -105,6 +107,26 @@
   "BIControlDriverRawCode": "NA",
   "BIControlDiscussion": "https://community.hubitat.com/t/release-bi-control-local-blue-iris-control/5454",
   "BIControlUpdateNote": "V1.0.9 - 05/08/19 - Fixed a typo",
+  
+  "CATTDirectorType": "App",
+  "CATTDirectorParentVersion": "v2.0.0",
+  "CATTDirectorChildVersion": "v2.0.0",
+  "CATTDirectorDriverVersion": "NA",
+  "CATTDirectorParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/BI%20Control/BIC%20Parent.groovy",
+  "CATTDirectorChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/BI%20Control/BIC%20Child.groovy",
+  "CATTDirectorDriverRawCode": "NA",
+  "CATTDirectorDiscussion": "https://community.hubitat.com/t/release-bi-control-local-blue-iris-control/5454",
+  "CATTDirectorUpdateNote": "V2.0.0 - 08/18/19 - Now App Watchdog 2 compatible",
+  
+  "ChromecastHelperType": "App",
+  "ChromecastHelperParentVersion": "v2.0.0",
+  "ChromecastHelperChildVersion": "v2.0.0",
+  "ChromecastHelperDriverVersion": "NA",
+  "ChromecastHelperParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/BI%20Control/BIC%20Parent.groovy",
+  "ChromecastHelperChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/BI%20Control/BIC%20Child.groovy",
+  "ChromecastHelperDriverRawCode": "NA",
+  "ChromecastHelperDiscussion": "https://community.hubitat.com/t/release-bi-control-local-blue-iris-control/5454",
+  "ChromecastHelperUpdateNote": "V2.0.0 - 08/18/19 - Now App Watchdog 2 compatible",
   
   "DeparturesType": "App",
   "DeparturesParentVersion": "v1.0.0",
