--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -59,24 +59,24 @@
   "Example2UpdateNote": "NA",
   
   "AbacusIntenseCountingType": "App",
-  "AbacusIntenseCountingParentVersion": "v1.0.7",
-  "AbacusIntenseCountingChildVersion": "v1.1.0",
+  "AbacusIntenseCountingParentVersion": "v2.0.0",
+  "AbacusIntenseCountingChildVersion": "v2.0.0",
   "AbacusIntenseCountingDriverVersion": "V1.0.2",
   "AbacusIntenseCountingParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Abacus%20-%20Intense%20Counting/AIC-parent.groovy",
   "AbacusIntenseCountingChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Abacus%20-%20Intense%20Counting/AIC-child.groovy",
   "AbacusIntenseCountingDriverRawCode": "https://github.com/bptworld/Hubitat/blob/master/Apps/Abacus%20-%20Intense%20Counting/AIC-driver.groovy",
   "AbacusIntenseCountingDiscussion": "https://community.hubitat.com/t/release-abacus-intense-counting/7883",
-  "AbacusIntenseCountingUpdateNote": "V1.1.0 - 04/15/19 - Code cleanup",
+  "AbacusIntenseCountingUpdateNote": "V2.0.0 - 08/18/19 - App Watchdog 2 compatible",
   
   "AbacusTimeTravelerType": "App",
-  "AbacusTimeTravelerParentVersion": "v1.0.4",
-  "AbacusTimeTravelerChildVersion": "v1.0.5",
+  "AbacusTimeTravelerParentVersion": "v2.0.0",
+  "AbacusTimeTravelerChildVersion": "v2.0.0",
   "AbacusTimeTravelerDriverVersion": "NA",
   "AbacusTimeTravelerParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Abacus%20-%20Time%20Traveler/ATT-parent.groovy",
   "AbacusTimeTravelerChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Abacus%20-%20Time%20Traveler/ATT-child.groovy",
   "AbacusTimeTravelerDriverRawCode": "NA",
   "AbacusTimeTravelerDiscussion": "https://community.hubitat.com/t/release-abacus-time-traveler/8091",
-  "AbacusTimeTravelerUpdateNote": "V1.0.5 - 03/22/19 - Maintenance release to prepare for V2.0.0. You will need this version to save all of your stats!",
+  "AbacusTimeTravelerUpdateNote": "V2.0.0 - 08/18/19 - App Watchdog 2 compatible",
 
   "AppWatchdog2Type": "App",
   "AppWatchdog2ParentVersion": "v2.0.0",
@@ -86,27 +86,27 @@
   "AppWatchdog2ChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Apps%20Watchdog%202/AW2-child.groovy",
   "AppWatchdog2DriverRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Apps%20Watchdog%202/AW2-driver.groovy",
   "AppWatchdog2Discussion": "https://community.hubitat.com/t/release-app-watchdog/9952",
-  "AppWatchdog2UpdateNote": "V2.0.0 - 08/18/19 - Initial Release",
+  "AppWatchdog2UpdateNote": "V2.0.0 - 08/18/19 - App Watchdog 2 compatible",
 
   "AtHomeSimulatorType": "App",
-  "AtHomeSimulatorParentVersion": "v1.0.0",
-  "AtHomeSimulatorChildVersion": "v1.0.2",
+  "AtHomeSimulatorParentVersion": "v2.0.0",
+  "AtHomeSimulatorChildVersion": "v2.0.0",
   "AtHomeSimulatorDriverVersion": "NA",
   "AtHomeSimulatorParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/At%20Home%20Simulator/AHS-parent.groovy",
   "AtHomeSimulatorChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/At%20Home%20Simulator/AHS-child.groovy",
   "AtHomeSimulatorDriverRawCode": "NA",
   "AtHomeSimulatorDiscussion": "https://community.hubitat.com/t/beta-at-home-simulator/8697",
-  "AtHomeSimulatorUpdateNote": "V1.0.2 - 04/15/19 - Code cleanup",
+  "AtHomeSimulatorUpdateNote": "V2.0.0 - 08/18/19 - App Watchdog 2 compatible",
   
   "BIControlType": "App",
-  "BIControlParentVersion": "v1.0.5",
-  "BIControlChildVersion": "v1.0.9",
+  "BIControlParentVersion": "v2.0.0",
+  "BIControlChildVersion": "v2.0.0",
   "BIControlDriverVersion": "NA",
   "BIControlParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/BI%20Control/BIC%20Parent.groovy",
   "BIControlChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/BI%20Control/BIC%20Child.groovy",
   "BIControlDriverRawCode": "NA",
   "BIControlDiscussion": "https://community.hubitat.com/t/release-bi-control-local-blue-iris-control/5454",
-  "BIControlUpdateNote": "V1.0.9 - 05/08/19 - Fixed a typo",
+  "BIControlUpdateNote": "V2.0.0 - 08/18/19 - App Watchdog 2 compatible",
   
   "CATTDirectorType": "App",
   "CATTDirectorParentVersion": "v2.0.0",
@@ -116,7 +116,7 @@
   "CATTDirectorChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/BI%20Control/BIC%20Child.groovy",
   "CATTDirectorDriverRawCode": "NA",
   "CATTDirectorDiscussion": "https://community.hubitat.com/t/release-bi-control-local-blue-iris-control/5454",
-  "CATTDirectorUpdateNote": "V2.0.0 - 08/18/19 - Now App Watchdog 2 compatible",
+  "CATTDirectorUpdateNote": "V2.0.0 - 08/18/19 - App Watchdog 2 compatible",
   
   "ChromecastHelperType": "App",
   "ChromecastHelperParentVersion": "v2.0.0",
@@ -126,7 +126,7 @@
   "ChromecastHelperChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/BI%20Control/BIC%20Child.groovy",
   "ChromecastHelperDriverRawCode": "NA",
   "ChromecastHelperDiscussion": "https://community.hubitat.com/t/release-bi-control-local-blue-iris-control/5454",
-  "ChromecastHelperUpdateNote": "V2.0.0 - 08/18/19 - Now App Watchdog 2 compatible",
+  "ChromecastHelperUpdateNote": "V2.0.0 - 08/18/19 - App Watchdog 2 compatible",
   
   "DeparturesType": "App",
   "DeparturesParentVersion": "v1.0.0",
