--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -112,61 +112,71 @@
   "CATTDirectorParentVersion": "v2.0.0",
   "CATTDirectorChildVersion": "v2.0.0",
   "CATTDirectorDriverVersion": "NA",
-  "CATTDirectorParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/BI%20Control/BIC%20Parent.groovy",
-  "CATTDirectorChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/BI%20Control/BIC%20Child.groovy",
+  "CATTDirectorParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/CATT%20Director/CATTD-parent.groovy",
+  "CATTDirectorChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/CATT%20Director/CATTD-child.groovy",
   "CATTDirectorDriverRawCode": "NA",
-  "CATTDirectorDiscussion": "https://community.hubitat.com/t/release-bi-control-local-blue-iris-control/5454",
+  "CATTDirectorDiscussion": "https://community.hubitat.com/t/release-catt-director-app-and-driver/20894",
   "CATTDirectorUpdateNote": "V2.0.0 - 08/18/19 - App Watchdog 2 compatible",
   
   "ChromecastHelperType": "App",
   "ChromecastHelperParentVersion": "v2.0.0",
-  "ChromecastHelperChildVersion": "v2.0.0",
+  "ChromecastHelperChildVersion": "NA",
   "ChromecastHelperDriverVersion": "NA",
-  "ChromecastHelperParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/BI%20Control/BIC%20Parent.groovy",
-  "ChromecastHelperChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/BI%20Control/BIC%20Child.groovy",
+  "ChromecastHelperParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Chromecast%20Helper/CH.groovy",
+  "ChromecastHelperChildRawCode": "NA",
   "ChromecastHelperDriverRawCode": "NA",
-  "ChromecastHelperDiscussion": "https://community.hubitat.com/t/release-bi-control-local-blue-iris-control/5454",
+  "ChromecastHelperDiscussion": "https://community.hubitat.com/t/release-chromecast-helper-simple-way-to-help-keep-your-google-nest-devices-alive/19237",
   "ChromecastHelperUpdateNote": "V2.0.0 - 08/18/19 - App Watchdog 2 compatible",
   
   "DeparturesType": "App",
-  "DeparturesParentVersion": "v1.0.0",
-  "DeparturesChildVersion": "v1.0.4",
+  "DeparturesParentVersion": "v2.0.0",
+  "DeparturesChildVersion": "v2.0.0",
   "DeparturesDriverVersion": "NA",
   "DeparturesParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Departures/D-parent.groovy",
   "DeparturesChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Departures/D-child.groovy",
   "DeparturesDriverRawCode": "NA",
   "DeparturesDiscussion": "https://community.hubitat.com/t/release-departures/12039",
-  "DeparturesUpdateNote": "V1.0.4 - 04/20/19 - Updated speaker/speech options",
+  "DeparturesUpdateNote": "V2.0.0 - 08/18/19 - App Watchdog 2 compatible",
   
   "DeviceSequencerType": "App",
-  "DeviceSequencerParentVersion": "v1.0.2",
-  "DeviceSequencerChildVersion": "v1.0.5",
+  "DeviceSequencerParentVersion": "v2.0.0",
+  "DeviceSequencerChildVersion": "v2.0.0",
   "DeviceSequencerDriverVersion": "NA",
   "DeviceSequencerParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Device%20Sequencer/DS-parent.groovy",
   "DeviceSequencerChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Device%20Sequencer/DS-child.groovy",
   "DeviceSequencerDriverRawCode": "NA",
   "DeviceSequencerDiscussion": "https://community.hubitat.com/t/release-device-sequencer/8596",
-  "DeviceSequencerUpdateNote": "V1.0.5 - 04/16/19 - Fixed some code",
+  "DeviceSequencerUpdateNote": "V2.0.0 - 08/18/19 - App Watchdog 2 compatible",
   
   "DeviceWatchdogType": "App",
-  "DeviceWatchdogParentVersion": "v1.1.0",
-  "DeviceWatchdogChildVersion": "v1.3.4",
+  "DeviceWatchdogParentVersion": "v2.0.0",
+  "DeviceWatchdogChildVersion": "v2.0.0",
   "DeviceWatchdogDriverVersion": "V1.0.4",
   "DeviceWatchdogParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Device%20Watchdog/DW-parent.groovy",
   "DeviceWatchdogChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Device%20Watchdog/DW-child.groovy",
   "DeviceWatchdogDriverRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Device%20Watchdog/DW-driver.groovy",
   "DeviceWatchdogDiscussion": "https://community.hubitat.com/t/release-device-watchdog/7692",
-  "DeviceWatchdogUpdateNote": "V1.3.4 - 05/24/19 - Fixed typo",
+  "DeviceWatchdogUpdateNote": "V2.0.0 - 08/18/19 - App Watchdog 2 compatible",
   
   "FollowMeType": "App",
-  "FollowMeParentVersion": "v1.0.0",
-  "FollowMeChildVersion": "v1.3.8",
+  "FollowMeParentVersion": "v2.0.0",
+  "FollowMeChildVersion": "v2.0.0",
   "FollowMeDriverVersion": "NA",
   "FollowMeParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Follow%20Me/FM-parent.groovy",
   "FollowMeChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Follow%20Me/FM-child.groovy",
   "FollowMeDriverRawCode": "NA",
   "FollowMeDiscussion": "https://community.hubitat.com/t/release-follow-me/12139",
-  "FollowMeUpdateNote": "V1.3.8 - 08/04/19 - Fixed old message being spoken. Fixed volume error on Goolge/Nest devices.",
+  "FollowMeUpdateNote": "V2.0.0 - 08/18/19 - App Watchdog 2 compatible",
+  
+  "FullyKioskDirectorType": "App",
+  "FullyKioskDirectorParentVersion": "v2.0.0",
+  "FullyKioskDirectorChildVersion": "v2.0.0",
+  "FullyKioskDirectorDriverVersion": "NA",
+  "FullyKioskDirectorParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Fully%20Kiosk%20Director/FKC-parent.groovy",
+  "FullyKioskDirectorChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Fully%20Kiosk%20Director/FKC-child.groovy",
+  "FullyKioskDirectorDriverRawCode": "NA",
+  "FullyKioskDirectorDiscussion": "https://community.hubitat.com/t/release-fully-kiosk-director/15310",
+  "FullyKioskDirectorUpdateNote": "V2.0.0 - 08/18/19 - App Watchdog 2 compatible",
   
   "LightingEffectsType": "App",
   "LightingEffectsParentVersion": "v1.2.0",
