--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -13,17 +13,19 @@
   "App09": "Device Sequencer",
   "App10": "Device Watchdog",
   "App11": "Follow Me",
-  "App12": "Lighting Effects",
-  "App13": "Magic Cube",
-  "App14": "Motion Controlled Scene Lighting",
-  "App15": "Notifier Plus",
-  "App16": "One at a Time",
-  "App17": "Send IP2IR",
-  "App18": "Simple Irrigation",
-  "App19": "Snapshot",
-  "App20": "Web Pinger",
-  "App21": "Welcome Home",
-  "App22": "What Did I Say",
+  "App12": "Fully Kiosk Director",
+  "App13": "Gentle Wake Up",
+  "App14": "Lighting Effects",
+  "App15": "Magic Cube",
+  "App16": "Motion Controlled Scene Lighting",
+  "App17": "Notifier Plus",
+  "App18": "One at a Time",
+  "App19": "Send IP2IR",
+  "App20": "Simple Irrigation",
+  "App21": "Snapshot",
+  "App22": "Web Pinger",
+  "App23": "Welcome Home",
+  "App24": "What Did I Say",
   
   
   "ExampleType": "App",
@@ -177,6 +179,16 @@
   "FullyKioskDirectorDriverRawCode": "NA",
   "FullyKioskDirectorDiscussion": "https://community.hubitat.com/t/release-fully-kiosk-director/15310",
   "FullyKioskDirectorUpdateNote": "V2.0.0 - 08/18/19 - App Watchdog 2 compatible",
+  
+  "GentleWakeUpType": "App",
+  "GentleWakeUpParentVersion": "v2.0.0",
+  "GentleWakeUpChildVersion": "v2.0.0",
+  "GentleWakeUpDriverVersion": "v1.0.0",
+  "GentleWakeUpParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Ported/Gentle%20Wake%20Up/GWU-parent.groovy",
+  "GentleWakeUpChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Ported/Gentle%20Wake%20Up/GWU-child.groovy",
+  "GentleWakeUpDriverRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Ported/Gentle%20Wake%20Up/GWU-driver.groovy",
+  "GentleWakeUpDiscussion": "https://community.hubitat.com/t/release-follow-me/12139",
+  "GentleWakeUpUpdateNote": "V2.0.0 - 08/18/19 - App Watchdog 2 compatible",
   
   "LightingEffectsType": "App",
   "LightingEffectsParentVersion": "v1.2.0",
