--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -15,17 +15,19 @@
   "App11": "Follow Me",
   "App12": "Fully Kiosk Director",
   "App13": "Gentle Wake Up",
-  "App14": "Lighting Effects",
-  "App15": "Magic Cube",
-  "App16": "Motion Controlled Scene Lighting",
-  "App17": "Notifier Plus",
-  "App18": "One at a Time",
-  "App19": "Send IP2IR",
-  "App20": "Simple Irrigation",
-  "App21": "Snapshot",
-  "App22": "Web Pinger",
-  "App23": "Welcome Home",
-  "App24": "What Did I Say",
+  "App14": "Life360 Tracker",
+  "App15": "Life360 with States",
+  "App16": "Lighting Effects",
+  "App17": "Magic Cube",
+  "App18": "Motion Controlled Scene Lighting",
+  "App19": "Notifier Plus",
+  "App20": "One at a Time",
+  "App21": "Send IP2IR",
+  "App22": "Simple Irrigation",
+  "App23": "Snapshot",
+  "App24": "Web Pinger",
+  "App25": "Welcome Home",
+  "App26": "What Did I Say",
   
   
   "ExampleType": "App",
@@ -189,6 +191,26 @@
   "GentleWakeUpDriverRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Ported/Gentle%20Wake%20Up/GWU-driver.groovy",
   "GentleWakeUpDiscussion": "https://community.hubitat.com/t/port-gentle-wake-up/19971",
   "GentleWakeUpUpdateNote": "V2.0.0 - 08/18/19 - App Watchdog 2 compatible",
+  
+  "Life360TrackerType": "App",
+  "Life360TrackerParentVersion": "v2.0.0",
+  "Life360TrackerChildVersion": "v2.0.0",
+  "Life360TrackerDriverVersion": "NA",
+  "Life360TrackerParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Life360%20Tracker/LT-parent.groovy",
+  "Life360TrackerChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Life360%20Tracker/LT-child.groovy",
+  "Life360TrackerDriverRawCode": "NA",
+  "Life360TrackerDiscussion": "https://community.hubitat.com/t/release-life360-tracker-works-with-the-paid-and-free-versions-of-life360/18276",
+  "Life360TrackerUpdateNote": "V2.0.0 - 08/18/19 - App Watchdog 2 compatible",
+  
+  "Life360withStatesType": "App",
+  "Life360withStatesParentVersion": "v2.0.0",
+  "Life360withStatesChildVersion": "NA",
+  "Life360withStatesDriverVersion": "v1.1.3",
+  "Life360withStatesParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Ported/Life360/L-app.groovy",
+  "Life360withStatesChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Ported/Life360/L-driver.groovy",
+  "Life360withStatesDriverRawCode": "NA",
+  "Life360withStatesDiscussion": "https://community.hubitat.com/t/release-life360-with-states-track-all-attributes-with-app-and-driver-also-supports-rm4-and-dashboards/18274",
+  "Life360withStatesUpdateNote": "V2.0.0 - 08/18/19 - App Watchdog 2 compatible",
   
   "LightingEffectsType": "App",
   "LightingEffectsParentVersion": "v1.2.0",
