--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -213,14 +213,14 @@
   "Life360withStatesUpdateNote": "V2.0.0 - 08/18/19 - App Watchdog 2 compatible",
   
   "LightingEffectsType": "App",
-  "LightingEffectsParentVersion": "v1.2.0",
-  "LightingEffectsChildVersion": "v1.2.1",
+  "LightingEffectsParentVersion": "v2.0.0",
+  "LightingEffectsChildVersion": "v2.0.0",
   "LightingEffectsDriverVersion": "NA",
   "LightingEffectsParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Lighting%20Effects/LE%20Parent.groovy",
   "LightingEffectsChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Lighting%20Effects/LE%20Child.groovy",
   "LightingEffectsDriverRawCode": "NA",
   "LightingEffectsDiscussion": "https://community.hubitat.com/t/release-lighting-effects/4330",
-  "LightingEffectsUpdateNote": "V1.2.1 - 04/15/19 - Code cleanup",
+  "LightingEffectsUpdateNote": "V2.0.0 - 08/18/19 - App Watchdog 2 compatible",
   
   "MagicCubeType": "App",
   "MagicCubeParentVersion": "V1.0.0",
