--- a/bptworldApps.json
+++ b/bptworldApps.json
@@ -233,24 +233,24 @@
   "MagicCubeUpdateNote": "V2.0.0 - 08/18/19 - App Watchdog 2 compatible",
   
   "MotionControlledSceneLightingType": "App",
-  "MotionControlledSceneLightingParentVersion": "v1.0.3",
-  "MotionControlledSceneLightingChildVersion": "v1.0.5",
+  "MotionControlledSceneLightingParentVersion": "v2.0.0",
+  "MotionControlledSceneLightingChildVersion": "v2.0.0",
   "MotionControlledSceneLightingDriverVersion": "NA",
   "MotionControlledSceneLightingParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Motion%20Controlled%20Scene%20Lighting/MCSL-Parent.groovy",
   "MotionControlledSceneLightingChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Motion%20Controlled%20Scene%20Lighting/MCSL-Child.groovy",
   "MotionControlledSceneLightingDriverRawCode": "NA",
   "MotionControlledSceneLightingDiscussion": "https://community.hubitat.com/t/release-motion-controlled-scene-lighting/7419",
-  "MotionControlledSceneLightingUpdateNote": "V1.0.5 - 04/15/19 - Code cleanup",
+  "MotionControlledSceneLightingUpdateNote": "V2.0.0 - 08/18/19 - App Watchdog 2 compatible",
   
   "NotifierPlusType": "App",
-  "NotifierPlusParentVersion": "v1.0.1",
-  "NotifierPlusChildVersion": "v1.2.0",
+  "NotifierPlusParentVersion": "v2.0.0",
+  "NotifierPlusChildVersion": "v2.0.0",
   "NotifierPlusDriverVersion": "NA",
   "NotifierPlusParentRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Notifier%20Plus/NP-parent.groovy",
   "NotifierPlusChildRawCode": "https://raw.githubusercontent.com/bptworld/Hubitat/master/Apps/Notifier%20Plus/NP-child.groovy",
   "NotifierPlusDriverRawCode": "NA",
   "NotifierPlusDiscussion": "https://community.hubitat.com/t/release-notifier/10859",
-  "NotifierPlusUpdateNote": "V1.2.0 - 06/18/19 - Fixed a couple of typos, Attempt to fix the 'run every x days' option",
+  "NotifierPlusUpdateNote": "V2.0.0 - 08/18/19 - App Watchdog 2 compatible",
   
   "OneataTimeType": "App",
   "OneataTimeParentVersion": "v1.1.2",
